tests/bad/closures/infer_no_hint.oc
/// fail: Cannot infer type, specify it explicitly

def foo(x: @fn(i32,i32): i32): i32 => x(1, 2)

def main() {
    let x = |a, b| => a + b + 3
    let t = foo(x)
    println(`t={t}`)
}